--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-- Bulletin
-- view reports
-- message HQ
-- Disaster Information
-- Send Resources
-- Create Disaster
+- Bulletin -> make dynamic
+- view reports --> Css
+- message HQ --> Make
+- Send Resources --> Make
+- Report Disaster
+
