Added Bulletin Page

--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
-- Bulletin -> make dynamic
+- Bulletin -> Css
 - view reports --> Css
 - message HQ --> Make
 - Send Resources --> Make
 - Report Disaster
-
